applications/elasticsearch/overlays/staging/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic-proxy
spec:
  replicas: 1
