applications/elasticsearch/overlays/staging/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch
spec:
  entryPoints:
    - elasticsearch
  routes:
    - match: Host(`staging.elasticsearch.services.sbling.net`)
      kind: Rule
      middlewares:
        - name: add-proxy-suffix
      services:
        - name: elastic-proxy
          port: 8080
          scheme: http
  tls:
    secretName: internal-ingress-cert
